--- a/FoodList/index.html
+++ b/FoodList/index.html
@@ -3,13 +3,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>TypeScript HTML App</title>
-    <link rel="stylesheet" href="app.css" type="text/css" />
-    <script src="app.js"></script>
+    <title>FoodList App</title>
+
 </head>
 <body>
-    <h1>TypeScript HTML App</h1>
 
-    <div id="content"></div>
 </body>
 </html>
