furthter prepping, model

--- a/FoodList/index.html
+++ b/FoodList/index.html
@@ -5,8 +5,28 @@
     <meta charset="utf-8" />
     <title>FoodList App</title>
 
+    <!--Material-->
+    <link rel="stylesheet" href="Common/Material/1.0.2/angular-material.css"/>
+    <link rel="stylesheet" href="Common/Material/1.0.2/angular-material.layouts.css"/>
+
 </head>
 <body>
 
+
+    <!--Angular-->
+    <script src="Common/Angular/1.4.8/angular.min.js"></script>
+
+    <!--Angular Material-->
+    <script src="Common/Material/1.0.2/angular-material.min.js"></script>
+
+    <!--MobileServices to Azure-->
+    <script src="http://ajax.aspnetcdn.com/ajax/mobileservices/MobileServices.Web-1.2.5.min.js"></script>
+    <script src="Common/Azure/angular-azure-mobile-service.js"></script>
+
+    <!--Underscore.js-->
+    <script src="Common/Underscore/1.8.3/underscore-min.js"></script>
+
+    <!--Model-->
+    <script src="Common/Model/Model.js"></script>
 </body>
 </html>
