foodlistitem form(start)

--- a/FoodList/index.html
+++ b/FoodList/index.html
@@ -63,5 +63,6 @@
     <!--Components-->
     <script src="indexController.js"></script>
     <script src="Components/FoodList/FoodListController.js"></script>
+    <script src="Components/FoodList/NewFoodListController.js"></script>
 </body>
 </html>
