form extension, dialog improvement

--- a/FoodList/index.html
+++ b/FoodList/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="Common/Material/1.0.2/angular-material.css" />
     <link rel="stylesheet" href="Common/Material/1.0.2/angular-material.layouts.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="Style/app.css" rel="stylesheet"/>
 
 </head>
 <body ng-app="FoodList">
