--- a/FoodList/index.html
+++ b/FoodList/index.html
@@ -25,6 +25,7 @@
                     <h2>
                         <span>Toolbar with Icon Buttons</span>
                     </h2>
+                    <span flex></span>
                     <md-button class="md-icon-button" aria-label="More">
                         <i class="material-icons">more_vert</i>
                     </md-button>
