--- a/FoodList/index.html
+++ b/FoodList/index.html
@@ -62,11 +62,15 @@
     <!--Model-->
     <script src="Common/Model/Model.js"></script>
 
+
     <!--Module-Init-->
     <!--<script src="initModule.js"></script>-->
     <!--Components-->
     <script src="indexController.js"></script>
     <script src="Components/FoodList/FoodListController.js"></script>
     <script src="Components/FoodList/NewFoodListController.js"></script>
+
+    <!--Services-->
+    <script src="Common/Services/CommonFunctionsService.js"></script>
 </body>
 </html>
