--- a/FoodList/index.html
+++ b/FoodList/index.html
@@ -23,7 +23,7 @@
                         <i class="material-icons">menu</i>
                     </md-button>
                     <h2>
-                        <span>Toolbar with Icon Buttons</span>
+                        <span>Foodlist</span>
                     </h2>
                     <span flex></span>
                     <md-button class="md-icon-button" aria-label="More">
