webApi test controller working :)

--- a/FoodList/index.html
+++ b/FoodList/index.html
@@ -29,7 +29,7 @@
                         <span>Foodlist</span>
                     </h2>
                     <span flex></span>
-                    <md-button class="md-icon-button" aria-label="More">
+                    <md-button class="md-icon-button" aria-label="More" ng-click="indexCtrl.btnTest_Clicked()">
                         <i class="material-icons">more_vert</i>
                     </md-button>
                 </div>
@@ -79,5 +79,6 @@
 
     <!--Services-->
     <script src="Common/Services/CommonFunctionsService.js"></script>
+    <script src="Common/Services/WebApiService.js"></script>
 </body>
 </html>
