--- a/FoodList/index.html
+++ b/FoodList/index.html
@@ -8,8 +8,8 @@
     <title>FoodList App</title>
 
     <!--Material-->
-    <link rel="stylesheet" href="Common/Material/1.0.6/angular-material.css" />
-    <link rel="stylesheet" href="Common/Material/1.0.6/angular-material.layouts.css" />
+    <link rel="stylesheet" href="Common/Material/1.0.8/angular-material.css" />
+    <!--<link rel="stylesheet" href="Common/Material/1.0.6/angular-material.layouts.css" />-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="Style/app.css" rel="stylesheet"/>
 
@@ -55,17 +55,22 @@
 
 
     <!--Angular-->
-    <script src="Common/Angular/1.4.8/angular.min.js"></script>
+    <!--<script src="Common/Angular/1.4.8/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>-->
+    <script src="Common/Angular/1.5.5/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
 
     <!--UI Router-->
     <script src="Common/UIRouter/0.2.18/angular-ui-router.min.js"></script>
 
     <!--Angular Material-->
-    <script src="Common/Material/1.0.6/angular-material.min.js"></script>
+    <script src="Common/Material/1.0.8/angular-material.min.js"></script>
 
     <!--MobileServices to Azure-->
     <script src="http://ajax.aspnetcdn.com/ajax/mobileservices/MobileServices.Web-1.2.5.min.js"></script>
@@ -73,6 +78,9 @@
 
     <!--Underscore.js-->
     <script src="Common/Underscore/1.8.3/underscore-min.js"></script>
+
+    <!--Satellizer-->
+    <script src="Common/Satellizer/0.14.0/satellizer.min.js"></script>
 
     <!--Model-->
     <script src="Common/Model/Model.js"></script>
