--- a/FoodList/index.html
+++ b/FoodList/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=400, initial-scale=1">
+    <!--<meta name="google-signin-client_id" content="695688707541-5edk1nvnhans8vvepb6g05v9f88snekj.apps.googleusercontent.com">-->
 
     <title>FoodList App</title>
 
@@ -47,7 +48,6 @@
 
     <div layout-sm="row" flex>
         <div flex>
-            <!--<ng-view></ng-view>-->
             <div ui-view></div>
         </div>
     </div>
@@ -80,7 +80,7 @@
     <script src="Common/Underscore/1.8.3/underscore-min.js"></script>
 
     <!--Satellizer-->
-    <script src="Common/Satellizer/0.14.0/satellizer.min.js"></script>
+    <!--<script src="Common/Satellizer/0.14.0/satellizer.min.js"></script>-->
 
     <!--Model-->
     <script src="Common/Model/Model.js"></script>
@@ -93,6 +93,7 @@
     <script src="Components/Home/HomeController.js"></script>
     <script src="Components/FoodList/FoodListController.js"></script>
     <script src="Components/FoodList/NewFoodListController.js"></script>
+    <script src="Components/Login/LoginController.js"></script>
 
     <!--Services-->
     <script src="Common/Services/CommonFunctionsService.js"></script>
