--- a/FoodList/index.html
+++ b/FoodList/index.html
@@ -27,6 +27,9 @@
                         <md-button class="md-primary" ui-sref="FoodList" ng-click="indexCtrl.closeSideNavLeft()">
                             Pantry
                         </md-button>
+                        <md-button class="md-primary" ui-sref="Party" ng-click="indexCtrl.closeSideNavLeft()">
+                            Personal
+                        </md-button>
                     </div>
                 </md-content>
             </md-sidenav>
@@ -96,6 +99,7 @@
     <script src="Components/FoodList/FoodListController.js"></script>
     <script src="Components/FoodList/NewFoodListController.js"></script>
     <script src="Components/Login/LoginController.js"></script>
+    <script src="Components/PartyForm/PartyFormController.js"></script>
 
     <!--Services-->
     <script src="Common/Services/CommonFunctionsService.js"></script>
