loginloop: insert party, update account, authUser to SessionService, authUser-object in TS

--- a/FoodList/index.html
+++ b/FoodList/index.html
@@ -89,6 +89,7 @@
 
     <!--Model-->
     <script src="Common/Model/Model.js"></script>
+    <script src="Common/Varia/AuthenticatedUser.js"></script>
 
 
     <!--Module-Init-->
@@ -105,5 +106,6 @@
     <script src="Common/Services/CommonFunctionsService.js"></script>
     <script src="Common/Services/WebApiService.js"></script>
     <script src="Common/Services/UserService.js"></script>
+    <script src="Common/Services/SessionService.js"></script>
 </body>
 </html>
