--- a/FoodList/index.html
+++ b/FoodList/index.html
@@ -106,6 +106,7 @@
     <script src="Components/FoodList/NewFoodListController.js"></script>
     <script src="Components/Login/LoginController.js"></script>
     <script src="Components/PartyForm/PartyFormController.js"></script>
+    <script src="Components/PantryLocation/PantryLocationController.js"></script>
 
     <!--Services-->
     <script src="Common/Services/CommonFunctionsService.js"></script>
